<resources>
    <string name="app_name">cancerAntidote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_listofhospitals">Listofhospitals</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_book_ambulance">book_ambulance</string>
    <string name="title_activity_otherservices">Otherservices</string>
    <string name="title_activity_loginpage">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_near_by_hospitals">Map</string>
    <string name="title_activity_ambulance__hospital">Ambulance_Hospital</string>
    <string name="choose_this_location">Choose this location</string>
    <string name="login_signup">Login/signup</string>
    <string name="other_services">Other services</string>
    <string name="ambulance_services">Ambulance Services</string>
    <string name="list_of_hospitals">List of Hospitals</string>
    <string name="what_is_cancer">What is Cancer?</string>
    <string name="cancer_symptoms">Cancer Symptoms</string>
    <string name="choose_hospital_for_ambulance">Choose hospital for ambulance</string>
    <string name="find_nearby_hospitals">Find nearby hospitals</string>
    <string name="insert_fake_data_in_hospital_table">fake data-hospital</string>
    <string name="insert_fake_data_in_ambulance_table">fake data-ambulance</string>
    <string name="choose_your_state">Choose Your State</string>

    <string-array name="state_name">
        <item>Click to select state</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Sikkim</item>
        <item>Tripura</item>
    </string-array>

    <string-array name="cancer_types">
        <item>skin cancer</item>
        <item>breast cancer</item>
        <item>lung cancer</item>
        <item>prostate cancer</item>
        <item>coloractal cancer</item>
        <item>bladder cancer</item>
        <item>lymphoma</item>
        <item>kidney cancer</item>
        <item>leukemia</item>
        <item>blood cancer</item>
    </string-array>
    <string name="title_activity_what_is_cancer">WhatIsCancer</string>
    <string name="title_activity_cancer_symptoms">CancerSymptoms</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_counselling">Counselling</string>
    <string name="title_activity_ivr">Ivr</string>
    <string name="title_activity_vns">Vns</string>
    <string name="title_activity_patient_record">PatientRecord</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_nearbyhospitals">Map</string>
    <string name="title_activity_ngo">Ngo</string>
    <string name="title_activity_form">Form</string>
</resources>
