<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.harsh.nandy.cancerantidote.FirstPage"
    tools:showIn="@layout/activity_firstpage">

    <Button
        android:id="@+id/button_cancer_symptoms"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:text="@string/cancer_symptoms"
        android:textColor="#FFFFFF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.099"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_what_is_cancer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:text="@string/what_is_cancer"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button_list_of_hospitals"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:text="@string/list_of_hospitals"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.397"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="change_activity"/>

    <Button
        android:id="@+id/button_ambulance_services"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:text="@string/ambulance_services"
        android:textColor="#FFFFFF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.529"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:onClick="change_activity" />

    <Button
        android:id="@+id/button_other_services"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:text="@string/other_services"
        android:textColor="#FFFFFF"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.684"
        android:onClick="change_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/login_signup"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.885"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="change_activity"/>

</android.support.constraint.ConstraintLayout>
